--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="pic_VXx_1.ico">
+  <meta name="description" content="Hello! My name is Tovey Moody and welcome to my site!! Have some fun and look around!">
+  <meta name="author" content="862058583">
 
-  <title>John Doe - Business Administration</title>
+  <title>Tovey Moody - Education Major</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Tovey Moody</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="me(1).jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Tovey Moody
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Education Major📚</div>
+        <p class="lead mb-4">My education journey has been long and continuous as I have grown and developed over the years of high school and college. My career goal is to become a math teacher, somewhere between 5th grade and 7th grade students. I’ve chosen math as my subject because it’s one of the fundamentals in this world, also because it is very important to know and learn. The grade levels are important to me because that’s the years I remember most and gained the most educational and social knowledge. The teachers in my classes made me aspire to be like them, helping kids to be their best selves and to learn all they can. So, learning how to be a teacher like them became my goal and growing up to one day hopefully change someone else's life. In between these two different education levels, I have struggled much with finding the correct path to my educational future. It is sometimes hard knowing what I want in college, but it was even harder knowing what I wanted to do in high school. <br><br>
 
-        Enter bio here<br><br>
+         My first struggle began in high school, back when I thought I knew what I wanted but actually didn’t have a clue. I was in a class that helps you in getting into college by helping you be organized, being more punctual, creating and managing your time, and even helping with visits to colleges. One of my favorite teachers actually took this class, a teacher who I also aspire to be like, respected but also approachable. The class, and my teacher, helped me to decide that college wasn’t just some far off place with more homework and a meaner teachers, but an opportunity to make my dream of being a teacher come true. They even helped me to realize that college was also going to be harder than high school was, which at the time I thought high school was easy. But I was determined to become a teacher and knew that college would help me to become one.<br><br>
 
-        Enter bio here
+        Having them there as support and helping me build my character, I knew getting into college was a goal that was not far off. However, when applying for college, I was, at the moment, having a different thought of being an actor, putting my teaching dreams to the side. So I applied to universities under theater major, hoping to have my temporary dreams of being an actor come to fruition. Fast forward from freshman year at Ucr to my now third year, I’m realizing I want to get back to my roots of teachings. So, I applied for a major switch and have talked to counselors and will be transferred, depending on my quarter grades. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/tovey-moody-0072a4232/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/tmood002">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/toveymoody">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:tmood002@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
+            <h3 class="mb-0">Five Guys Crew Member</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Fried Fries and Cooked burgers and Hot Dogs<br> 
+              • Attended to customers<br>
+              • Keep clean environment and closed at night<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">April 2021 - September 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
+            <h3 class="mb-0">ASB</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Handled student affairs in meetings<br>
+              • Worked with teachers<br>
+             • Ran in and off school events<br>
+
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2018 - May 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
+            <h3 class="mb-0">Light Operator</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Setup and operated stage lights<br>
+            • Communicated with other lights to cooperate<br>
+            • Helped cast backstage<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2018 - January 2019</span>
           </div>
         </div>
 
@@ -152,33 +153,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors in Arts</div>
+            <div>BA in Theater, Film, and Digital Production</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">Semptember 2019 - May 2023</span>
           </div>
         </div>
 
@@ -191,7 +170,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="image 1.jpg" width="500px">
+            <img src="image 2.jpg" width="500px">
+            <img src="image 3.jpg" width="500px">
+            <img src="image 4.jpg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +181,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Tovey Moody</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
